--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:  # 👉 ini supaya bisa dijalankan manual dari GitHub UI
+    branches: [main]
+  workflow_dispatch: # bisa dijalankan manual dari GitHub UI
 
 jobs:
   build:
@@ -28,43 +28,21 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Checkout Repository
-        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.1"
+          php-version: "8.2" # sesuaikan jika di lokal pakai versi lain
           extensions: mbstring, intl, mysqli
           coverage: xdebug
 
       - name: Update Composer Dependencies (fix autoload)
         run: composer update --no-interaction
 
-      - name: Set Spark Executable Permission (Linux fix)
+      - name: Set Spark Executable Permission
         run: chmod +x spark
 
-      - name: Copy .env.testing ke .env
-        run: |
-          if [ -f .env.testing ]; then
-            cp .env.testing .env
-          else
-            cp env .env
-          fi
-
-      - name: Jalankan Migrasi Database
-        run: php spark migrate --all --quiet
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'  # Sesuaikan dengan versi lokal
-          extensions: mbstring, intl, mysqli
-          coverage: xdebug
-
-      - name: Install Composer Dependencies
-        run: composer install --no-interaction --prefer-dist
-
-      - name: Copy .env.testing ke .env (fallback ke .env jika tidak ada)
+      - name: Copy .env.testing ke .env (fallback ke env jika tidak ada)
         run: |
           if [ -f .env.testing ]; then
             cp .env.testing .env
@@ -75,7 +53,5 @@ jobs:
       - name: Jalankan Migrasi Database
         run: php spark migrate --all --quiet
 
-      - name: Jalankan PHPUnit dengan coverage
-        run: vendor/bin/phpunit --coverage-text --colors=always
       - name: Jalankan PHPUnit (dengan coverage)
         run: vendor/bin/phpunit --coverage-text --colors=always
