--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,17 +2,17 @@ name: Auto Deploy to Proxmox VM
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout Source
       uses: actions/checkout@v3
 
-    - name: Deploy via SSH to Proxmox VM
+    - name: Deploy to VM via SSH
       uses: appleboy/ssh-action@v0.1.8
       with:
         host: 192.168.1.16
