--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         host: 192.168.1.16
         username: agung
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        key_path: C:\\Users\\Agung\\.ssh\\id_ed25519
         port: 22
         script: |
           echo "🚀 Deployment started"
