--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,15 @@ jobs:
     - name: Checkout Source
       uses: actions/checkout@v3
 
-    - name: Deploy to VM via SSH
-      uses: appleboy/ssh-action@v0.1.8
-      with:
-        host: 192.168.1.16
-        username: agung
-        key_path: C:\\Users\\Agung\\.ssh\\id_ed25519
-        port: 22
-        script: |
-          echo "🚀 Deployment started"
-          cd /var/www/html
-          if [ ! -d ".git" ]; then
-            sudo rm -rf ./*
-            git clone https://github.com/AgungReza/apk-manajemen-barang-rental.git .
-          else
-            git pull origin main
-          fi
-          sudo chown -R www-data:www-data .
-          echo "✅ Deployment complete"
+    - name: Deploy locally
+      run: |
+        echo "🚀 Deployment started"
+        cd /var/www/html
+        if [ ! -d ".git" ]; then
+          sudo rm -rf ./*
+          git clone https://github.com/AgungReza/apk-manajemen-barang-rental.git .
+        else
+          git pull origin main
+        fi
+        sudo chown -R www-data:www-data .
+        echo "✅ Deployment complete"
