--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,21 @@
-name: Auto Deploy to Proxmox VM
+name: Auto Deploy ke Proxmox atau Railway
 
 on:
   push:
-    branches: [main]   # ⬅️ Otomatis jalan saat kamu push ke branch `main`
-  workflow_dispatch:   # ⬅️ Opsional: bisa dijalankan manual via tombol
+    branches: [main]   # Workflow otomatis dijalankan saat push ke branch `main`
+  workflow_dispatch:   # Bisa dijalankan manual via tombol dan input pilihan
 
 jobs:
-  deploy:
-    name: Deploy ke Server Proxmox
-    runs-on: [self-hosted, AGUNGPORTO]
+  deploy_proxmox:
+    name: Deploy ke Proxmox
+    runs-on: [self-hosted, AGUNGPORTO]  # Gunakan server yang di-host oleh Anda untuk Proxmox
+    if: ${{ github.event.inputs.deploy_to == 'proxmox' }}  # Memeriksa input deploy_to yang memilih Proxmox
 
     steps:
       - name: 🔄 Checkout Source Code
         uses: actions/checkout@v3
 
-      - name: 🚀 Jalankan Proses Deployment
+      - name: 🚀 Jalankan Proses Deployment ke Proxmox
         shell: bash
         run: |
           echo "🚀 Memulai deployment pada: $(date)"
@@ -43,3 +44,41 @@ jobs:
         run: |
           echo "📄 5 file terbaru:"
           ls -lt /var/www/html | head -n 6
+
+  deploy_railway:
+    name: Deploy ke Railway
+    runs-on: ubuntu-latest  # Gunakan runner Ubuntu yang disediakan oleh GitHub untuk Railway
+    if: ${{ github.event.inputs.deploy_to == 'railway' }}  # Memeriksa input deploy_to yang memilih Railway
+
+    steps:
+      - name: 🔄 Checkout Source Code
+        uses: actions/checkout@v3
+
+      - name: 🚀 Jalankan Proses Deployment ke Railway
+        shell: bash
+        run: |
+          echo "🚀 Memulai deployment pada: $(date)"
+          echo "📁 Navigasi ke direktori aplikasi Railway"
+
+          if [ ! -d ".git" ]; then
+            echo "🔄 Folder belum terinisialisasi Git. Mengkloning repository..."
+            git clone https://github.com/AgungReza/apk-manajemen-barang-rental.git .
+          else
+            echo "📥 Pull update terbaru dari branch main..."
+            git reset --hard
+            git pull origin main
+          fi
+
+          echo "🔐 Menjalankan build untuk Railway..."
+          # Misalnya, install dependencies jika diperlukan
+          # npm install (untuk Node.js)
+          # bundle install (untuk Ruby)
+          # pip install -r requirements.txt (untuk Python)
+
+          echo "✅ Deployment selesai pada: $(date)"
+
+      - name: 🧪 Verifikasi File Utama Terkini
+        run: |
+          echo "📄 5 file terbaru:"
+          ls -lt | head -n 6
+
